arvan-paas/pgadmin/service.yml
kind: Service
apiVersion: v1
metadata:
  name: pgadmin-svc
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
  selector:
    app: pgadmin
  type: ClusterIP
